kubernetes/apps/observability/thanos/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: thanos-query-frontend
spec:
  hostnames: ["thanos.${SECRET_DOMAIN}"]
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: thanos-query-frontend
          port: 9090
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: thanos-query-frontend-analogpuddle
spec:
  hostnames: ["thanos.analogpuddle.com"]
  parentRefs:
    - name: envoy-internal-ap
      namespace: network
  rules:
    - backendRefs:
        - name: thanos-query-frontend
          port: 9090
